# FALCON-Frame-Aware-Localization-of-Crime-via-Observation-budget-Networks

./: .gitattributes  .gitignore  Dockerfile  FALCON_PRD.docx  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  preprocess.py  pyproject.toml  requirements.txt  validate-submission.sh
frontend/: index.html  script.js
server/: CCTV_cosine_env.py  app.py  data_loader.py  grader.py  main.py  models.py
