[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "falcon-cctv-openenv"
version = "0.1.0"
description = "FALCON: Frame-Aware Localization of Crime via Observation-budget Networks"
authors = [{ name = "Knightkolla" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "openai>=1.14.0",
    "prettytable>=3.9.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "timm>=0.9.0",
    "torchmetrics>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"
